--- a/client/src/Attributions.css
+++ b/client/src/Attributions.css
@@ -5,7 +5,6 @@
   margin: 0 auto;
   min-height: 100vh;
   max-width: 825px;
-  min-width: 500px;
   padding: 1rem;
 }
 
