--- a/client/src/Contact.css
+++ b/client/src/Contact.css
@@ -4,7 +4,6 @@
   margin: 0 auto;
   min-height: 100vh;
   max-width: 825px;
-  min-width: 500px;
   text-align: center;
   padding: 1rem;
 }
